# glium-ui-rs

./: Cargo.toml
src/: font.rs  lib.rs  render.rs  shader.rs  texture.rs  ui.rs  window.rs
src/resources/shaders/: default.fsh  default.vsh  font.fsh  font.vsh  textured.fsh  textured.vsh
